Fix content area styles for Enfold theme on mobile.

--- a/css/compat/themes/compat-enfold-rtl-251-beta-1.css
+++ b/css/compat/themes/compat-enfold-rtl-251-beta-1.css
@@ -33,6 +33,14 @@ body.theme-enfold.woocommerce-checkout #main.fc-main {
   }
 }
 
+@media (max-width: 749px) {
+  body.theme-enfold.woocommerce-checkout .fc-content.container {
+    width: 100% !important;
+    max-width: 100% !important;
+    padding: 0 20px 80px !important;
+  }
+}
+
 body.theme-enfold.woocommerce-checkout#top.woocommerce-page .fc-wrapper #payment {
   border: 0;
 }
