--- a/sass/compat/themes/enfold/_checkout-content-area.scss
+++ b/sass/compat/themes/enfold/_checkout-content-area.scss
@@ -13,3 +13,13 @@ body#{ $_body-theme-selector }#{ $_body-page-selector } #main.fc-main {
 	@media (#{$bp-larger-than-desktop-large}) { padding: 0 $container-spacing-desktop-large $global-spacing-large !important; } // Needed to override inline styles added by some themes
 	@media (#{$bp-larger-than-desktop-extra-large}) { padding: 0 $container-spacing-desktop-extra-large $global-spacing-large !important; } // Needed to override inline styles added by some themes
 }
+
+
+
+body#{ $_body-theme-selector }#{ $_body-page-selector } .fc-content.container {
+	@media (#{$bp-smaller-than-tablet}) { 
+		width: 100% !important; // Needed to override styles added by the theme
+		max-width: 100% !important; // Needed to override styles added by the theme
+		padding: 0 $container-spacing-mobile $global-spacing-large !important; // Needed to override styles added by the theme
+	}
+}
